name:                relation-tool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         A lightweight relational algebra operators library (see README.md).
homepage:            https://github.com/janthelme/relation-tool#readme
license:             BSD3
license-file:        LICENSE
author:              JAnthelme
maintainer:          janthelme@gmail.com
copyright:           Copyright: (c) 2016 Janthelme
category:            Data Structure
build-type:          Simple
extra-doc-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Relvar.LSet, Relvar, Algebra, Algebra.Function, Relvar.Pretty, Relvar.CSV Relvar.Pretty.BoxesText
  build-depends:       base >= 4.7 && < 5
                      , containers
                      , text
                      , time
                      , bytestring
                      , boxes
                      -- use the line below when using the Relvar.CSV module
                      , csv-conduit, vector
                      -- use below when using BoxesT module (Data.Text rather than String)
                      , split
  default-language:    Haskell2010

test-suite relation-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, text, time
                     , relation-tool
                     , QuickCheck, random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/janthelme/relation-tool
